# wallet-core

./: registry.json
docs/: registry.md
include/TrustWalletCore/: TWBlockchain.h  TWCoinType.h
rust/: Cargo.toml
rust/tw_ckbtc/: Cargo.toml
rust/tw_ckbtc/src/: context.rs  entry.rs  lib.rs
rust/tw_coin_entry/src/: error.rs
rust/tw_coin_registry/: Cargo.toml
rust/tw_coin_registry/src/: blockchain_type.rs  dispatcher.rs
rust/tw_encoding/: Cargo.toml
rust/tw_internet_computer/: Cargo.toml
rust/tw_internetcomputer/: Cargo.toml
rust/tw_internetcomputer/src/: crypto.rs  encode.rs  ffi.rs  interface_spec.rs  lib.rs  public_key.rs  request_id.rs  rosetta.rs  send_request_proto.rs  sign.rs  sign_transfer.rs  sign_transfer_sendpb.rs  types.rs  validation.rs
rust/tw_internetcomputer/src/encode/: envelope_pair.rs  transfer.rs
rust/tw_internetcomputer/src/interface_spec/: request_id.rs
rust/tw_internetcomputer/src/sign/: identity.rs  interface_spec.rs  proto.rs  rosetta.rs  transfer.rs
rust/tw_internetcomputer/src/sign/interface_spec/: envelope.rs  request_id.rs
rust/tw_internetcomputer/src/types/: account_identifier.rs
rust/wallet_core_rs/: Cargo.toml  cbindgen.toml
rust/wallet_core_rs/src/: lib.rs
src/: AnyAddress.cpp  Coin.cpp
src/ChainkeyBitcoin/: Entry.cpp  Entry.h
src/InternetComputer/: Address.cpp  Address.h  Entry.cpp  Entry.h  Signer.cpp  Signer.h
src/interface/: TWAnyAddress.cpp
src/proto/: InternetComputer.proto
src/rust/: Wrapper.h
swift/Tests/: CoinAddressDerivationTests.swift
tests/common/: CoinAddressDerivationTests.cpp
(+30 files in other folders)
