[package]
name = "tw_internetcomputer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.9.0"
ic-agent = "0.25.0"
ic-ledger-types = "0.7.0"
crc32fast = "1.3.2"
der = { version = "0.7.3", features = ["alloc"] }
tw_encoding = { path = "../tw_encoding" }
tw_hash = { path = "../tw_hash" }
tw_memory = { path = "../tw_memory" }
pkcs8 = { version = "0.10.2", features = ["alloc"] }
